# logger

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  Makefile_cmake  SCanner.ioc  STM32-for-VSCode.config.yaml  STM32F767ZITx_FLASH_ethernet.ld  STM32F767ZITx_FLASH_shifted.ld  STM32Make.make  blackbox.ioc
Core/Inc/: debug.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Inc/pipo/: shell.h
Core/Src/: can.c  debug.c  main.c  rtc.c  stm32f7xx_it.c  syscalls.c  usart.c
Core/Src/pipo/: shell.c
LWIP/App/: lwip.c
